<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="authViewModel"
            type="com.yeonkims.realnoteapp.logic.viewmodels.auth.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/logout_question" />


        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/logout_confirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="14sp" />

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</layout>