<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.yeonkims.realnoteapp.logic.viewmodels.auth.SignupViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_logo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/dancing_script"
                    android:text="@string/sub_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/coming_soon"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/strong_pink"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_bg"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:text="@={viewModel.email}"
                    android:hint="@string/email_example"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_bg"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:text="@={viewModel.password}"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_password_confirm"
                    android:inputType="textPassword"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:background="@drawable/edit_text_round_gray_bg"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:text="@={viewModel.passwordConfirm}"
                    android:hint="@string/confirm_password"
                    android:padding="12dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffb9c3"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:onClick="@{() -> viewModel.signUp()}"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/sign_in_here"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey" />

        </RelativeLayout>

        <include
            layout="@layout/loading_overlay"
            bind:isVisible="@{viewModel.isLoading}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>